<resources>
    <string name="app_name">AppFavas</string>
    <string name="title_activity_layout_drawable">LayoutDrawableActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="propietario">Propietario</string>
    <string name="recibos">Recibos</string>
    <string name="ventas">Ventas</string>
    <string name="articulos">Artículos</string>
    <string name="cocina">Cocina</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="cierre">Cierre</string>
    <string name="pagos">Pagos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar">Buscar</string>
    <string name="fecha">Fecha</string>
    <string name="img_billete">img_billete</string>
    <string name="importe_monto">Importe/Monto</string>
    <string name="hora">Hora</string>
    <string name="id">ID</string>
    <string name="img_tarjeta">img_tarjeta</string>
    <string name="agregar_fruta">Agregar Fruta</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="_0_00">0.00</string>
    <string name="inventario">Inventario</string>
    <string name="stock">Stock</string>
    <string name="_0">0</string>
    <string name="guardar">Guardar</string>
    <string name="editar_frutas">Editar Frutas</string>
    <string name="descripcion_egresos">Descripción</string>
    <string name="cantidad">Cantidad</string>
    <string name="realizar_pago">Realizar Pago</string>
    <string name="editar_pago">Editar Pago</string>
    <string name="eliminar_pago">Eliminar Pago</string>

    <string name="reembolsar">Reembolsar</string>
    <string name="totaln">Total</string>
    <string name="total">0.00</string>

    <!--Spinner Roles-->
    <string-array name="roles">
        <item>Administrador</item>
        <item>Cocina</item>
    </string-array>
    <integer-array name="cat">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </integer-array>
    <string name="prompt">Roles</string>
    <string name="nueva_venta">Nueva Venta</string>
    <string name="cambio">CAMBIO</string>
    <string name="total_pagado">TOTAL PAGADO</string>
    <string name="total_tarjeta">TOTAL TARJETA</string>
    <string name="pagosMays">PAGOS</string>
    <string name="monto">Monto</string>
    <string name="referencia">Referencia</string>
    <string name="menu_desplegable">Menu Desplegable</string>
    <!--Spinner Roles-->
</resources>