<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/shape_item">

    <ImageView
        android:id="@+id/img_billete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/img_billete"
        android:src="@drawable/billetes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_importeBillete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/importe_monto"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/img_billete"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/img_billete"
        app:layout_constraintTop_toBottomOf="@id/tv_importeBillete"
        />

    <TextView
        android:id="@+id/id_billete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/tv_importeBillete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>