<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".ui.pagos.PagosFragment">

    <TextView
        android:id="@+id/tvPagos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pagos"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vwPagos"
        android:layout_width="520dp"
        android:layout_height="700dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_shape_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPagos" />


    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion_egresos"
        android:minHeight="48sp"
        android:inputType="text"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@id/vwPagos"
        app:layout_constraintStart_toStartOf="@id/vwPagos"
        app:layout_constraintTop_toTopOf="@+id/vwPagos" />

    <EditText
        android:id="@+id/etCantidad"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/cantidad"
        android:inputType="number"
        android:minHeight="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcion" />

    <Button
        android:id="@+id/btnRealizarPago"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/back"
        android:text="@string/realizar_pago"
        android:textColor="@color/boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCantidad" />


    <Button
        android:id="@+id/btnEliminarPago"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/back"
        android:text="@string/eliminar_pago"
        android:textColor="@color/boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRealizarPago" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="Menu Desplegable"
        android:fitsSystemWindows="false"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:openDrawer="start">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            app:headerLayout="@layout/nav_header_layout_drawable"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            app:menu="@menu/activity_layout_drawable_drawer"
            />


    </androidx.drawerlayout.widget.DrawerLayout>



</androidx.constraintlayout.widget.ConstraintLayout>